updating notebook with relevant information.

--- a/Milestone.ipynb
+++ b/Milestone.ipynb
@@ -5,7 +5,59 @@
    "id": "7637d8a2",
    "metadata": {},
    "source": [
-    "My project is making a machine learning micro service using a weighted Linear Regression and a weighted XGBoost. This is the code I used to train a model and make it presistant for the purpose of being able to be called later in an API. "
+    "# Machine Learning Microservice for F1 Race Prediction\n",
+    "\n",
+    "This notebook represents **Milestone Update** work for my Machine Learning Web App.  \n",
+    "The overall project goal is to build a **machine-learning microservice** that powers a web application capable of predicting outcomes of Formula 1 races.\n",
+    "\n",
+    "### ✔ What this notebook includes\n",
+    "- Loading and preprocessing historical F1 racing data  \n",
+    "- Training a **Weighted Linear Regression model**  \n",
+    "- Saving a persistent model for API usage  \n",
+    "- Predicting upcoming races in the 2025 season  \n",
+    "- Summaries of predictions for future integration into a FastAPI backend\n",
+    "\n",
+    "### ✔ Why this model?\n",
+    "Linear Regression is a simple but effective baseline for ranking problems like predicting finishing position, especially at this stage of the project.\n",
+    "\n",
+    "The full production service will later include:\n",
+    "- XGBoost for a more advanced model  \n",
+    "- FastAPI endpoints for live predictions  \n",
+    "- Containerization (Docker/Podman)  \n",
+    "- Web dashboard for displaying predictions  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e960473",
+   "metadata": {},
+   "source": [
+    "## 📊 Dataset Overview\n",
+    "\n",
+    "The dataset contains historical F1 results, including:\n",
+    "\n",
+    "- Driver  \n",
+    "- Team  \n",
+    "- Grid start  \n",
+    "- Final position  \n",
+    "- Laps completed  \n",
+    "- Track  \n",
+    "- Season/year  \n",
+    "\n",
+    "### Feature Selection\n",
+    "\n",
+    "For this milestone, the model uses the following features:\n",
+    "\n",
+    "- `grid` — driver’s starting position\n",
+    "- `team_strength` — derived performance metric\n",
+    "- `track_avg_position` — average driver performance by track\n",
+    "- `points_last_3` — rolling window of recent performance\n",
+    "\n",
+    "These features help model performance trends and driver consistency.\n",
+    "\n",
+    "The target variable is:\n",
+    "\n",
+    "- `finish_position` — numerical ranking position\n"
    ]
   },
   {
@@ -165,7 +217,18 @@
    "id": "f2c3e1b6",
    "metadata": {},
    "source": [
-    "We then use the presistent model to predict the remaining races using an engineered CSV, and for testing purposes we used the 2024 grid posistion in order to predict our 2025 podium for the remain 6 races. "
+    "## 🏁 Predicting Remaining F1 2025 Races\n",
+    "\n",
+    "After training, we load the persistent model and apply it to the next 6 races of the 2025 season.\n",
+    "\n",
+    "For each track:\n",
+    "- The model simulates finishing positions\n",
+    "- Outputs the top 10 predicted drivers\n",
+    "- Saves results to a structured output file for future API use\n",
+    "\n",
+    "These predictions will eventually be served through:\n",
+    "- A FastAPI `/predict` endpoint\n",
+    "- A frontend React dashboard using charts and tables\n"
    ]
   },
   {
@@ -531,6 +594,55 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d85050c1",
+   "metadata": {},
+   "source": [
+    "# 📈 Results Summary\n",
+    "\n",
+    "The model successfully produced predictions for the remaining races of the 2025 season.\n",
+    "\n",
+    "The notebook prints:\n",
+    "- Top 10 drivers per race\n",
+    "- Completed vs future race counts\n",
+    "- Output file path for integration into the backend\n",
+    "\n",
+    "These predictions will be used as sample output for the upcoming web app milestone.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20209e94",
+   "metadata": {},
+   "source": [
+    "# 🚀 Next Steps Toward Full Web App Integration\n",
+    "\n",
+    "### 🔧 Backend (FastAPI)\n",
+    "- Add endpoint: `/predict`\n",
+    "- Load the trained model using `joblib`\n",
+    "- Format predictions as JSON\n",
+    "- Add CORS support for frontend requests\n",
+    "\n",
+    "### 🎨 Frontend (React / TypeScript)\n",
+    "- Build dashboard:\n",
+    "  - Table of predicted podiums\n",
+    "  - Charts (driver performance, team strength)\n",
+    "- Connect frontend to API endpoint\n",
+    "\n",
+    "### 🐳 Containerization\n",
+    "- Create Dockerfile for FastAPI app\n",
+    "- Build docker-compose stack\n",
+    "- Test locally using Postman\n",
+    "\n",
+    "### 🧪 Testing\n",
+    "- Add unit tests for model loading and inference\n",
+    "- Begin integration test suite (pytest)\n",
+    "\n",
+    "### 📦 Deployment\n",
+    "- Eventually deploy via Render, Fly.io, or self-hosted mini-PC server\n"
    ]
   }
  ],
