upating notebook with even more information.

--- a/Milestone.ipynb
+++ b/Milestone.ipynb
@@ -8,7 +8,7 @@
     "# Machine Learning Microservice for F1 Race Prediction\n",
     "\n",
     "This notebook represents **Milestone Update** work for my Machine Learning Web App.  \n",
-    "The overall project goal is to build a **machine-learning microservice** that powers a web application capable of predicting outcomes of Formula 1 races.\n",
+    "The overall project goal is to build a **machine-learning microservice** that powers a web application capable of predicting outcomes of Formula 1 races. Used AI in part to make this notebook and my outputs for the API to look nicer and be more readable. \n",
     "\n",
     "### ✔ What this notebook includes\n",
     "- Loading and preprocessing historical F1 racing data  \n",
